@@ -78,10 +78,10 @@ class TestComprehensiveCaseFold < Test::Unit::TestCase
     end
 
     tests = [
-      CaseTest.new(:downcase,   [:lithuanian], downcase),
-      CaseTest.new(:upcase,     [:lithuanian], upcase),
-      CaseTest.new(:capitalize, [:lithuanian], titlecase, downcase),
-      # swapcase?????!!!!!
+      CaseTest.new(:downcase,   [], downcase),
+      CaseTest.new(:upcase,     [], upcase),
+      CaseTest.new(:capitalize, [], titlecase, downcase),
+      # @@@@ TODO: figure out how to test swapcase
       CaseTest.new(:downcase,   [:fold],       casefold),
       CaseTest.new(:upcase,     [:turkic],     turkic_upcase),
       CaseTest.new(:downcase,   [:turkic],     turkic_downcase),
