@@ -1,3 +1,11 @@
+Tue May 31 10:10:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* string.c: Activate full Unicode case mapping for UTF-8 by removing
+	  the protective check for the presence of an option.
+	  Update documentation.
+
+	* test/ruby/enc/test_case_comprehensive.rb: Adjust tests for above change.
+
 Tue May 31 00:30:11 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/raddrinfo.c (host_str, port_str): Use StringValueCStr
